# GUI_LIB

./: CMakeLists.txt  README.md
config/: default.cfg
src/: gui.c  gui.h  main.c
